--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.16.2",
     "bluebird": "^3.5.0",
     "lodash": "^4.17.4",
-    "seneca": "^3.4.1"
+    "seneca": "^3.4.1",
+    "seneca-entity": "^2.0.2"
   }
 }
