--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^4.1.0",
+    "chai-http": "^3.0.0",
     "faker": "^4.1.0",
     "mocha": "^3.5.0",
     "nodemon": "^1.11.0",
@@ -35,7 +36,11 @@
     "axios": "^0.16.2",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
+    "express": "^4.15.4",
     "lodash": "^4.17.4",
+    "method-override": "^2.3.9",
     "seneca": "^3.4.1",
     "seneca-entity": "^2.0.2",
     "seneca-mongo-store": "^1.1.0"
