--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "kryptstorm-entity": "^1.0.1",
+    "kryptstorm-http": "^1.0.1",
+    "kryptstorm-service": "^1.0.1",
     "lodash": "^4.17.4",
     "method-override": "^2.3.9",
     "seneca": "^3.4.1",
